[project]
name = "neural-style-transfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "tensorflow[and-cuda]>=2.20.0",
    "tensorflow-hub>=0.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
